--- a/laptot-detail.html
+++ b/laptot-detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalles</title>
+    <title>Editar o crear</title>
     <link rel="stylesheet" href="css/stylo-list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -15,23 +15,22 @@
     <header>
        <!-- nav -->
        <nav>
-        <a href="sign-in.html"><i class="fas fa-user"></i>Inicia Sesión</a>
+        <a href="sign-in.html"><i class="fas fa-user"></i>Iniciar Sesión</a>
         <a href="sign-up.html"><i class="fas fa-user-plus"></i>Registrarse</a>
       </nav>
-      <img class="logo" src="img/Logo-PC.png" alt="logo">
-    </header>
+      <a href="laptot-list.html"><img class="logo" src="img/Logo-PC.png" alt="logo"></a>
+
     <br>
       <div class="row">
   
       </div>
       <nav class="nav-2">
-        <a href="laptot-list.html">PRODUCTOS</a>
-        <a href="laptot-view.html">CARACTERISTICAS</a>
-        <a href="manufacturer-view.html">FABRICANTES</a>
-        
-        
+          <a href="laptot-list.html">INICIO</a>
+          <a href="laptot-view.html">PRODUCTO</a>
+          <a href="manufacturer-view.html">FABRICANTES</a>
+          <a href="laptot-detail.html"><button>Crear producto +</button></a>
       </nav>
-
+        <br>
     </header>
 
     <div >
